[package]
name = "tiaoshi-dashi-qemu-sbi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustsbi = { git = "https://github.com/luojia65/rustsbi", rev = "16310ac" }
riscv = { git = "https://github.com/rust-embedded/riscv", rev = "16e4870f", features = ["inline-asm"] }
linked_list_allocator = "0.9"
embedded-hal = "1.0.0-alpha.1"
nb = "1"
